# hyprvault

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/app/: mod.rs  state.rs
src/data/: demo.rs  mock.rs  mod.rs  secret_service.rs  source.rs
src/ui/: layout.rs  mod.rs  theme.rs  themes.rs
