[package]
name = "hyprvault"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
secret-service = { version = "5.1.0", default-features = false, features = [
  "rt-tokio-crypto-rust",
] }
uuid = { version = "1.11", features = ["v4", "serde"] }
zbus = "5.0"
chrono = "0.4"
